--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
+PYTHONPATH=pylibs
 WORK_DIR_NAME=.direnv/virtualenv
 if ! [ -d $WORK_DIR_NAME ]; then
   virtualenv.py --no-site-packages --distribute $WORK_DIR_NAME
